# Hasse_diagram

./: .gitignore  Hasse_diagram.sln  README.md  demo.ipynb  face_enum_graphic.py
Hasse_diagram/: CMakeLists.txt  FacetTree.cpp  FacetTree.h  Hasse_diagram.cpp  Hasse_diagram.vcxproj  Hasse_diagram.vcxproj.filters  KPf_StorStruct.cpp  KPf_StorStruct.h  SpecialTree.cpp  SpecialTree.h  UserInterface.h  cube.txt  cube_wv2.txt  cube_wv3.txt  cube_wv4.txt  cube_wv5.txt  cube_wv7.txt  cube_wv8.txt  face_enum_wrapper.cpp  main.cpp  oct.txt  pyr3.txt  pyr4.txt  pyr_wv1.txt  pyr_wv2.txt  setup.py  sqr.txt  user_interface.h
Hasse_diagram/examples/: 4cube.txt  4oct.txt  cube_wv1.txt  cube_wv3.txt  cube_wv6.txt  pyr_wv3.txt  pyr_wv4.txt  sqr_w_v.txt
Hasse_diagram/examples/polymake_examples/: fat_polytop_gen.ipynb
Hasse_diagram/examples/polymake_examples/cyclic_poly_dim/: cyclic_prod_2_15.json  cyclic_prod_3_15.json  cyclic_prod_4_15.json  cyclic_prod_5_15.json  cyclic_prod_6_15.json  cyclic_prod_7_15.json
Hasse_diagram/examples/polymake_examples/cyclic_poly_vertex/: cyclic_prod_3_10.json  cyclic_prod_3_11.json  cyclic_prod_3_12.json  cyclic_prod_3_13.json  cyclic_prod_3_14.json  cyclic_prod_3_5.json  cyclic_prod_3_6.json  cyclic_prod_3_7.json  cyclic_prod_3_8.json  cyclic_prod_3_9.json
Hasse_diagram/examples/polymake_examples/simplex/: simplex_10.json  simplex_11.json  simplex_12.json  simplex_13.json  simplex_14.json  simplex_15.json  simplex_3.json  (+6 more)
Hasse_diagram/src/: CMakeLists.txt  FacetTree.h  SpecialTree.cpp  UserInterface.h  main.cpp
Hasse_diagram/src/libs/: CMakeLists.txt  FacetTree.cpp  FacetTree.h  KPf_StorStruct.cpp  KPf_StorStruct.h  SpecialTree.cpp  SpecialTree.h
